# quick_service

./: .gitignore  CMakeLists.txt  README.md
3rd/lua-5.3.5/src/: lua  luac
common/: ThreadPool.cpp  ThreadPool.h  lua_tinker.cpp  lua_tinker.h
include/: LuaAPI.h  LuaManager.h  Msg.h  Worker.h  conn.h  conn_mgr.h  epoll.h  lock.h  qs.h  service.h  service_mgr.h  socketworker.h  work_mgr.h  worker.h
proto/: client  client.cpp  proto.sh  user.pb.h  user.proto
proto/protoc/: user.pb.cc
src/: LuaAPI.cpp  LuaManager.cpp  conn.cpp  conn_mgr.cpp  main.cpp  qs.cpp  service.cpp  service_mgr.cpp  socketworker.cpp  work_mgr.cpp  worker.cpp
srv_lua/: srv_mgr.lua
srv_lua/game/: init.lua
srv_lua/gateway/: init.lua
srv_lua/main/: init.lua
srv_lua/shared_table/: srv_typedef.lua
